--- a/public/system.html
+++ b/public/system.html
@@ -413,7 +413,8 @@
             <div class="d-flex justify-content-between align-items-center flex-wrap">
                 <div>
                     <h1 class="header-title">
-                        <i class="fas fa-home me-2"></i>Family Management System
+                        <a href="/index.html">
+                        <i class="fas fa-home me-2"></a></i>Family Management System
                     </h1>
                     <p class="text-muted mb-0">Manage families, members, and performance duties efficiently</p>
                 </div>
