--- a/public/index.html
+++ b/public/index.html
@@ -859,7 +859,7 @@
         <div class="social-grid">
           <!-- Facebook -->
           <a
-            href="https://www.facebook.com/Duhigure"
+            href="https://www.facebook.com/gatodagoat"
             target="_blank"
             class="social-card animate-on-scroll social-link"
           >
@@ -872,7 +872,7 @@
 
           <!-- Twitter / X -->
           <a
-            href="https://x.com/mutoniphionah7?s=21"
+            href="https://x.com/headmastergdg"
             target="_blank"
             class="social-card animate-on-scroll social-link"
             style="animation-delay: 0.2s"
